# reverse-search-browser

./: .gitignore  README.md  index.html  install_requirements.sh  package-lock.json  package.json  pnpm-lock.yaml  setup.ps1  setup_windows.bat  tailwind.config.js
.github/workflows/: build.yml  releases.yml
data/: history.db
src/: App.tsx  index.css
src-tauri/: Cargo.toml  history.db  tauri.conf.json  tauri.conf.json-artifacts-git-actions
src-tauri/data/: history.db
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ChromeAddressBar.tsx  ChromeMenu.tsx  ChromeMenuDropdown.tsx  ChromeTabBar.tsx  Layout.tsx  NavBar.tsx  ShortcutsHelp.tsx
src/components/overlays/: Omnibox.tsx
src/hooks/: useGlobalShortcuts.ts  useZenEscape.ts
src/lib/: analytics.ts  download.ts  session.ts
src/store/: history.ts  incognito.ts  tabs.ts  zen.ts
src/views/: Bookmarks.tsx  Downloads.tsx  History.tsx  Home.tsx  Settings.tsx
